# gdown

./: .gitignore  CLAUDE.md  HARNESS.md  README.md  ROADMAP.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.claude/agents/: feature.md  qa.md  reviewer.md
.claude/commands/: component.md  feature.md  qa.md  release.md  review.md
.github/workflows/: ci.yml
src/: App.vue  main.ts  style.css
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: ai_files.rs  export.rs  fs.rs  mod.rs  session.rs
src/__tests__/: setup.ts
src/assets/: main.css
src/codemirror/: frontmatter-highlight.ts  math-language.ts  mathjax-preview.ts
src/components/: CodeBlockNodeView.vue  ConflictDialog.vue  Editor.vue  ExportDialog.vue  ExportToast.vue  FindReplace.vue  FrontMatterNodeView.vue  ImageViewer.vue  InsertLinkDialog.vue  LinkTooltip.vue  MermaidNodeView.vue  QuickOpenDialog.vue  RecentFiles.vue  SaveNotification.vue  SourceEditor.vue  StatusBar.vue
src/composables/: useKeyboardShortcuts.ts
src/extensions/: CLAUDE.md  FocusMode.ts  FrontMatter.ts  GdownBlockquote.ts  GdownBulletList.ts  GdownCodeBlock.ts  GdownHeading.ts  GdownHorizontalRule.ts  GdownImage.ts  GdownLink.ts  GdownOrderedList.ts  GdownTable.ts  GdownTaskList.ts  InlineFormatting.ts  MarkdownImageInputRule.ts  MarkdownLinkInputRule.ts  MathBlock.ts  MathInline.ts  MermaidBlock.ts  SearchHighlight.ts  TypewriterMode.ts  index.ts
src/services/: autoSave.ts  export.ts
src/types/: tab.ts  (+2 more)
(+73 files in other folders)
